[package]
name = "orga"
version = "0.3.1"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2021"
description = "State machine engine"
license = "MIT"

[dependencies]
abci2 = { git = "https://github.com/nomic-io/abci2", rev = "cba210e7ac6c9006d81c0b5e75453c235ba9e1eb", optional = true }
tendermint-rpc = { version = "=0.30.0", features = ["http-client"], optional = true }
tendermint = { version = "=0.30.0", optional = true }
tendermint-proto = { version = "=0.30.0" }
merk = { git = "https://github.com/nomic-io/merk", rev = "aaa870e603b0cbe8437aee5c9538926ed078a082", optional = true, default-features = false }
orga-macros = { path = "macros", version = "0.3.1" }
seq-macro = "0.3.3"
log = "0.4.17"
hex-literal = "0.4.1"
sha2 = "0.10.6"
is_executable = { version = "1.0.1", optional = true }
reqwest = {version = "0.11.16", features = ["blocking"], optional = true }
flate2 = "1.0.25"
tar = "0.4.38"
ed = { git = "https://github.com/nomic-io/ed", rev = "9c0e206ffdb59dacb90f083e004e8080713e6ad8" }
toml_edit = "0.19.8"
prost = {version = "=0.11"}
home = { version = "0.5.4", optional = true }
ed25519-dalek = "1"
thiserror = "1.0.40"
bech32 = "0.9.1"
async-trait = "0.1.68"
futures-lite = "1.13.0"
num-rational = "0.4.1"
num-traits = "0.2.15"
rust_decimal = "1.29"
ripemd = "0.1.3"
web-sys = { version = "0.3.61", features = ["Window", "Storage", "console"] }
rust_decimal_macros = "1.29"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
hex = "0.4.3"
base64 = "0.21.1"
secp256k1 = { version = "0.27.0", features = ["bitcoin_hashes"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
bincode = {version = "1.3.3", optional = true }
ibc = {version = "=0.40.0", optional = true, features = ["borsh"] }
ibc-proto = { version = "=0.29.0", default-features = false, features = ["std"], optional = true }
ics23 = { version = "=0.10.0", optional = true }
prost-types = {version = "=0.11", optional = true}
tokio = { version = "1.27.0", optional = true }
tonic = { version = "0.9", optional = true, features = ["prost"] }
cosmrs = "=0.12.0"
derive_more = "0.99.17"
sha3 = "0.10.6"
serde-wasm-bindgen = "0.5.0"
nom = "7.1.3"
chrono = "0.4.24"
paste = "1.0.12"
borsh = "0.10.3"
educe = "0.4.20"
rand = "0.8.5"

[dev-dependencies]
tempdir = "0.3.7"
serial_test = "2.0.0"
pretty_env_logger = "0.5.0"
async-process = "1.7.0"
tracing-subscriber = "0.3.17"

[package.metadata.docs.rs]
features = ["abci", "merk/full"]

[features]
default = []
abci = ["abci2", "tendermint", "tendermint-rpc", "is_executable", "home", "secp256k1/rand-std", "tokio/full", "tonic", "ibc-proto/server", "reqwest"]
merk-verify = ["merk/verify"]
merk-full = ["merk/full", "ics23"]
state-sync = []
feat-ibc = ["ibc", "bincode", "ics23", "prost-types", "ibc-proto", "tendermint"]

[profile.release]
lto = true

[[example]]
name = "ibc"
required-features = ["abci", "merk-full", "feat-ibc"]

[[example]]
name = "app"
crate-type = ["bin"]
path = "examples/app/main.rs"
required-features = ["feat-ibc", "merk-verify"]
