[package]
name = "orga"
version = "0.3.1"
authors = ["Turbofish <team@turbofish.org>"]
edition = "2021"
description = "Deterministic state machine engine"
license = "Apache-2.0"

[dependencies]
abci2 = { git = "https://github.com/turbofish-org/abci2", rev = "27d8d7a5a6e458f5881e3eb13116cb2a3ae049b5", optional = true }
tendermint-rpc = { version = "0.38.0", features = [
    "http-client",
], optional = true }
tendermint = { version = "0.38.0", optional = true }
tendermint-proto = { version = "0.38.0" }
merk = { git = "https://github.com/nomic-io/merk", rev = "cc496300bff8a9223e5589cdc2f2e0db3ae14208", optional = true, default-features = false }
orga-macros = { path = "macros", version = "0.3.1" }
log = "0.4.17"
hex-literal = "0.4.1"
sha2 = "0.10.6"
is_executable = { version = "1.0.1", optional = true }
reqwest = { version = "0.11.16", features = ["blocking"], optional = true }
flate2 = "1.0.22"
tar = "0.4.38"
ed = { git = "https://github.com/nomic-io/ed", rev = "a657be856792039ff60c2f67e7920e38cd3acffc" }
toml_edit = "0.22.9"
prost = { version = "0.13.1" }
home = { version = "0.5.4", optional = true }
ed25519-dalek = "2.1.1"
thiserror = "1.0.40"
bech32 = "0.9.1"
async-trait = "0.1.68"
futures-lite = "2.3.0"
num-traits = "0.2.15"
rust_decimal = "1.29"
ripemd = "0.1.3"
rust_decimal_macros = "1.29"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
hex = "0.4.3"
base64 = "0.22.0"
secp256k1 = { version = "0.28.2", features = ["hashes"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
ibc = { version = "0.54.0", optional = true, features = ["borsh", "serde"] }
ibc-proto = { version = "0.47.0", default-features = false, features = [
    "std",
    "borsh",
    "serde",
], optional = true }
ics23 = { version = "0.12.0", optional = true }
prost-types = { version = "0.13.1", optional = true }
tokio = { version = "1.27.0", optional = true }
tonic = { version = "0.12.3", optional = true, features = ["prost"] }
cosmrs = "0.18.0"
derive_more = "0.99.17"
sha3 = "0.10.6"
serde-wasm-bindgen = "0.6.5"
nom = "7.1.3"
paste = "1.0.12"
borsh = "1.5.1"
educe = "0.5.11"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.0.0"
pretty_env_logger = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["Storage"] }

[package.metadata.docs.rs]
features = ["abci", "merk/full"]

[features]
default = []
abci = [
    "abci2",
    "tendermint",
    "tendermint-rpc",
    "is_executable",
    "home",
    "secp256k1/rand-std",
    "tokio/full",
    "tonic",
    "ibc-proto/server",
    "reqwest",
]
merk-verify = ["merk/verify"]
merk-full = ["merk/full", "ics23"]
state-sync = []
feat-ibc = ["ibc", "ics23", "prost-types", "ibc-proto", "tendermint"]

[profile.release]
lto = true

[[example]]
name = "ibc"
required-features = ["abci", "merk-full", "feat-ibc"]

[[example]]
name = "app"
crate-type = ["bin"]
path = "examples/app/main.rs"
required-features = ["feat-ibc", "merk-verify"]
