[package]
name = "orga-macros"
version = "0.3.1"
authors = ["Matt Bell <mappum@gmail.com>"]
edition = "2021"
description = "Macros for the orga crate"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.16", features = [ "full" ] }
proc-macro2 = "1.0.49"
quote = "1.0.3"
heck = "0.3.3"
darling = "0.20.1"
regex = "1.7.1"
itertools = "0.10.5"
